# Deakin-Detonator-Toolkit

./: .env.example  .gitignore  .pnp.cjs  .prettierignore  .prettierrc.json  705-bug-fix.py  CONTRIBUTIONS.md  DDT-User-Guide.docx  README.md  SMGGhostScanner.tsx  index.html  install.json  install1.sh  install2.sh  install_dependencies.sh  install_exploits.sh  libgl-bug-fix.md  output.tex.txt  package-lock.json  package.json  setup_ddt.sh  sonar-project.properties  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  google.com.au_ips.txt  tauri.conf.json
src-tauri/ $/: audit.txt
src-tauri/ $/home/: audit.txt
src-tauri/ /home/: audit.txt
src-tauri/core/: __init__.py  colors.py  prompt.py  updater.py  user-agents.txt  zap.py
src-tauri/d9964c1934447cdd/: 7f8f95555fdde918
src-tauri/exploits/: AddVideo.py  CVE-2022-1388.py  CVE-2022-24112.py  CVE-2022-26134.py  CVE-2022-26809.py  CVE-2022-27925.py  CVE-2023-22515.py  CVE-2023-22527.py  CVE-2023-23397.py  CVE-2024-49088.py  SMGGhostScanner.py  Tcpdump.py  cve-2020-1472.py  cve-2022-22963.py  cve-2022-36804.py  find_offset.py  gobuster.py  harvest.py  msfvenom.py  shodkey.py  zerologon_tester.py
src-tauri/exploits/Bash-Scripts/: FTPterminal.sh  Tcpdumpshell.sh  Tracerouteshell.sh  netcatTerminal.sh
src-tauri/exploits/CVE-2017-0144/: CVE-2017-0144.py
src-tauri/exploits/Goldeneye/: goldeneye.py
src-tauri/exploits/GyoiThon/: configure.py  requirements.txt
src-tauri/exploits/Photon/: CHANGELOG.md  LICENSE.md  README.md
src-tauri/icons/: icon.icns
src-tauri/src/: file_handler.rs  ip_insight.rs  main.rs
(+431 files in other folders)
